extends Control




func _on_Level_1_pressed():
	get_tree().change_scene("res://scenes/levels/level1/Main.tscn")


func _on_Level_2_pressed():
	get_tree().change_scene("res://scenes/levels/level2/Level2.tscn")


func _on_Level_3_pressed():
	get_tree().change_scene("res://scenes/levels/level3/Level3.tscn")


func _on_Level_4_pressed():
	get_tree().change_scene("res://scenes/levels/level4/Level4.tscn")


func _on_Level_5_pressed():
	get_tree().change_scene("res://scenes/levels/level5/Level5.tscn")
